Fixed issue of there being empty, white space at the bottom of the webpage when JavaScript is disabled

--- a/style.css
+++ b/style.css
@@ -157,8 +157,7 @@ p
 .divider
 {
     /* SIZE */
-    height: 100%;
-    height: 100vw;
+    height: 0;
     width: 100%;
     width: 100vw;
     
